--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Folders to ignore
+*/data/
+*/configs/
+*/config_data/
+*/venv/
+*/venv_spihrl/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
