--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ SPI_HPC/data/
 SPI_HPC/configs/
 SPI_HPC/config_data/
 SPI_HRL/mdp_data/
+SPI_HRL/rewards/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
